tiny ui spacing fixed near counter

--- a/css/loadin.css
+++ b/css/loadin.css
@@ -548,6 +548,7 @@ nav {
 
   .hero-section-container {
     padding-top: 164px;
+    margin-bottom: 164px;
   }
 
 }
@@ -592,6 +593,7 @@ nav {
 
   .hero-section-container {
     padding-top: 128px;
+    margin-bottom: 128px;
   }
 }
 
